[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/characters/cow_rig.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/cow.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 1.13703 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 0.793458 )

[node name="cow_agent" type="KinematicBody" groups=[
"cow",
]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.454, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.264589 )
shape = SubResource( 1 )

[node name="cow" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
margin_right = 146.0
margin_bottom = 57.0
text = "Cow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05057, 0.772278 )

[node name="poo_spawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10694, -0.981687 )

[node name="milk_spawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65996, 1.10694, 1.07901 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.958982, 0.114345 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
